<resources>
    <string name="app_name">MADDKotlinTute1</string>
    <string name="hntName">Enter Username</string>
    <string name="hntPassword">Enter Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnForgotPassword">Forgot Password</string>
    <string name="hntReEnterPassword">Re-enter Password</string>
    <string name="btnSend">Send</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="htnEmail">Enter Email</string>
</resources>